--- a/app/template/pages/about.hbs
+++ b/app/template/pages/about.hbs
@@ -2,7 +2,7 @@
 about_active: active
 title: About Us
 tagline_text: About Us
-lead: About ClinDesk &amp; White Coat Academy
+lead: About ClinDesk & White Coat Academy
 
 header_title: About
 header_text: Our Team
