--- a/app/template/pages/calc/gfr.hbs
+++ b/app/template/pages/calc/gfr.hbs
@@ -2,6 +2,7 @@
 layout: calculators.hbs
 calc_title: Cockgroft
 calc_short_description: GFR calculator
+calc_active: active
 ---
 
 <p>Creatinine Clearance: \{{calc_cockcroftGaultFormula(gfr_calc_settings.weight_units, gfr_calc_settings.creatinine_units)}}</p>
