--- a/app/template/pages/calc/index.hbs
+++ b/app/template/pages/calc/index.hbs
@@ -1,7 +1,8 @@
 ---
 layout: calculators.hbs
 calc_title: Clinical Calculators
-calc_short_description: From ClinDesk &amp; White Coat Academy
+calc_short_description: From ClinDesk & White Coat Academy
+calc_active: active
 ---
 
 <div class="bs-callout bs-callout-warning">
