--- a/app/template/partials/google_analytics.hbs
+++ b/app/template/partials/google_analytics.hbs
@@ -1,19 +1,11 @@
-{%- if config.prod is defined -%}
-<script type="text/javascript">
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    {%- if "whitecoatacademy" in config.apphost -%}
-    ga('create', 'UA-32988270-2', {'siteSpeedSampleRate': 100});
-    {%- elif "clindesk" in config.apphost -%}
     ga('create', 'UA-32988270-1', {'siteSpeedSampleRate': 100});
-    {% endif %}
-
     ga('require', 'linkid', 'linkid.js');
     ga('require', 'displayfeatures');
     ga('send', 'pageview');
     window.onerror = function(m, u, l) { ga('send', 'event', 'JSError', m, u + ':' + l, null, {'nonInteraction': 1}); };
 </script>
-{% endif %}
