More template updates.

--- a/app/template/pages/404.hbs
+++ b/app/template/pages/404.hbs
@@ -1,6 +1,8 @@
-{% extends "_base.html" %}
-{% block title %}Error: Page Not Found{% endblock %}
-{% block tagline_text %}Page Not Found{% endblock %}
+---
+support_active: active
+title: Error: Page Not Found
+tagline_text: Page Not Found
+---
 
 
 <script>
