--- a/app/template/pages/donate.hbs
+++ b/app/template/pages/donate.hbs
@@ -1,8 +1,13 @@
-{% extends "_base.html" %}
-{% block title %}Support Us{% endblock %}
-{% block tagline_text %}Help Open Medicine{% endblock %}
-{% block lead %}Donate and help us to create free medical resources{% endblock %}
-{% block maincontent %}
+---
+support_active: active
+title: Support Us
+tagline_text: Help Open Medicine
+lead: Donate and help us to create free medical resources
+
+header_title: Support US
+header_text: Donate
+---
+
 <body>
 <div class="container">
     <br><br>
