--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -11,14 +11,15 @@
 
     {{>google_analytics }}
 
-    <!-- build:css styles/vendor.css -->
+    <!-- build:css /styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="../styles/cd-style.css">
-    <link rel="stylesheet" href="../styles/shared.css">
+
+    <!-- build:css(.tmp) /styles/main.css -->
+    <link rel="stylesheet" href="/styles/cd-style.css">
+    <link rel="stylesheet" href="/styles/shared.css">
     <!-- endbuild -->
 
     <!-- ref:css //cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css -->
@@ -90,13 +91,13 @@
 </div><!-- /.container -->
 
 
-<!-- build:js scripts/vendor.js -->
+<!-- build:js /scripts/vendor.js -->
 <!-- bower:js -->
 <script src="../bower_components/jquery/jquery.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js scripts/plugins.js -->
+<!-- build:js /scripts/plugins.js -->
 <script src="../bower_components/bootstrap/js/affix.js"></script>
 <script src="../bower_components/bootstrap/js/alert.js"></script>
 <script src="../bower_components/bootstrap/js/dropdown.js"></script>
@@ -111,8 +112,9 @@
 <script src="../bower_components/bootstrap/js/tab.js"></script>
 <!-- endbuild -->
 
-<script src="../scripts/cd-scripts.js"></script>
-
+<!-- build:js /scripts/app.js -->
+<script src="/scripts/cd-scripts.js"></script>
+<!-- endbuild -->
 
 </body>
 </html>
