Fix assets for usemin

--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
             </button>
             {{! TODO: Remove this style override. Boo. }}
-            <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{assets}}/images/content/logo_sml.png" alt="ClinDesk, Inc."></a>
+            <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{assets}}content/logo_sml.png" alt="ClinDesk, Inc."></a>
         </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
