--- a/app/template/pages/about.hbs
+++ b/app/template/pages/about.hbs
@@ -124,8 +124,8 @@ header_text: Our Team
                     </div>
                     <div class="tab-pane" id="docs-state">
                         We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
-                        <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
-                        <li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
+                        <br/><br/><ul><li><a href="https://bsd.sos.mo.gov/BusinessEntity/BusinessEntityDetail.aspx?ID=3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
+                        <li><a href="https://bsd.sos.mo.gov/BusinessEntity/BusinessEntityDetail.aspx?ID=3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
                     </div>
                     <div class="tab-pane" id="docs-federal">Our federal filings for tax-exempt status are currently pending. We will update this site with documents when we know more!<br/><br/>
                         If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
