--- a/app/template/pages/index.hbs
+++ b/app/template/pages/index.hbs
@@ -50,17 +50,9 @@ lead: Opening Medical Education
                     <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
                     <li>An interactive physical exam tutorial featuring gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
                     <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
-                    <li>The <a href="https://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, advocating for influenza vaccines</li>
+                    <li>The <a href="https://www.vaccinatedoctors.org/" target="_blank">Vaccinate Doctors Initiative</a>, advocating for influenza vaccines</li>
                 </ul>
                 <p>Hopefully we can change the face of medical education. If you're interested in helping out, please get in touch!</p><br>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-7 col-md-7 col-sm-7">
-                <p>Stay tuned,</p>
-                <p>Nick Semenkovich</p>
-                <p style="line-height:0px">Founder</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5">
                 <img src="{{assets}}logos/bottom-drop-banner.png" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-responsive img-thumbnail">
