--- a/app/template/layouts/calculators.hbs
+++ b/app/template/layouts/calculators.hbs
@@ -84,7 +84,7 @@ title: <%=calc_title %>
         </div>
 
         <div class="col-md-9 col-sm-8">
-            <h1 class="page-header">{{calc_title}} <small>{{calc_short_description}}</small></h1>
+            <h1 class="page-header">{{calc_short_title}} <small>{{calc_short_description}}</small></h1>
             <ol class="breadcrumb">
                 <li><a href="/calc/">Home</a></li>
                 <li class="active"> {{calc_title}} </li>
