--- a/app/template/pages/calc/timi-risk-score-for-stemi.hbs
+++ b/app/template/pages/calc/timi-risk-score-for-stemi.hbs
@@ -1,7 +1,10 @@
 ---
 layout: calculators.hbs
 calc_title: TIMI Risk Score for STEMI
-calc_short_description: ST Segment Elevation Myocardial Infarction
+meta_description: TIMI Risk Score Calculator for STEMI - ST Segment Elevation Myocardial Infarction
+
+calc_short_title: TIMI Risk Score
+calc_short_description: for STEMI
 calc_active: active
 ---
 
