Playing with ace-build

--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -98,6 +98,7 @@
 <!-- endbuild -->
 
 <!-- build:js /scripts/plugins.js -->
+<!-- bower:js -->
 <script src="../bower_components/bootstrap/js/affix.js"></script>
 <script src="../bower_components/bootstrap/js/alert.js"></script>
 <script src="../bower_components/bootstrap/js/dropdown.js"></script>
@@ -110,6 +111,7 @@
 <script src="../bower_components/bootstrap/js/scrollspy.js"></script>
 <script src="../bower_components/bootstrap/js/collapse.js"></script>
 <script src="../bower_components/bootstrap/js/tab.js"></script>
+<!-- endbower -->
 <!-- endbuild -->
 
 <!-- build:js /scripts/app.js -->
