--- a/app/template/pages/history-physical-wizard/index.hbs
+++ b/app/template/pages/history-physical-wizard/index.hbs
@@ -6,36 +6,81 @@ header_title: H&P Wizard
 header_text: A template with intelligent hints
 ---
 
-<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+<!-- build:js /styles/medium.css -->
+<!-- bower:css -->
+<link rel="stylesheet" href="../bower_components/medium-editor/dist/css/medium-editor.css">
+<link rel="stylesheet" href="../bower_components/medium-editor/dist/css/themes/default.css">
+<!-- endbower -->
+<!-- endbuild -->
 
+
+<!-- outline: 0px solid transparent; //-->
 <div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Editor</h3>
         </div>
         <div class="panel-body">
-            <div id="editor" style="height: 600px; font-family: 'Inconsolata'; font-size: 16px;">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <dl class="dl-horizontal">
+                <dt>CC:</dt>
+                <dd class="editable"></dd>
 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <dt>HPI:</dt>
+                <dd class="editable"></dd>
 
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                <dt>PMHx:</dt>
+                <dd>TEXT</dd>
 
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
+                <dt>PSHx:</dt>
+                <dd></dd>
+
+                <dt>PSHx:</dt>
+                <dd></dd>
+
+
+                <dt>Meds:</dt>
+                <dd></dd>
+
+
+                <dt>Allergies:</dt>
+                <dd></dd>
+
+
+                <dt>FHx:</dt>
+                <dd></dd>
+
+
+                <dt>SHx:</dt>
+                <dd></dd>
+
+
+                <dt>ROS:</dt>
+                <dd></dd>
+
+
+                <dt>PE:</dt>
+                <dd></dd>
+
+
+                <dt>A&P:</dt>
+                <dd></dd>
+            </dl>
+
         </div>
     </div>
 </div>
 
 
-<!-- build:js /scripts/ace-build.js -->
+<!-- build:js /scripts/medium.js -->
 <!-- bower:js -->
-<script src="../bower_components/ace-builds/src/ace.js"></script>
+<script src="../bower_components/medium-editor/dist/js/medium-editor.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
 <script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/clouds");
-    editor.getSession().setMode("ace/mode/text");
+    {{! This is a hackjob. Fix this up. }}
+    window.onload = function() {
+        $('dd').addClass('editable');
+        var editor = new MediumEditor('.editable', {});
+    }
 </script>
